--- a/style.css
+++ b/style.css
@@ -58,3 +58,11 @@ body {
     margin: 0 auto;
     padding-top: 50px;
 }
+
+
+@media screen and (max-width:767px) {
+    .main {
+    width: 100%;
+    padding: 20px;
+}
+}
