--- a/style.css
+++ b/style.css
@@ -75,5 +75,9 @@ body {
     }
     .main button {
         font-size: 16px;
+        width: 100%;
+    }
+    body {
+        padding: 20px 10px;
     }
 }
