--- a/style.css
+++ b/style.css
@@ -80,4 +80,9 @@ body {
     body {
         padding: 20px 10px;
     }
+    .main td {
+        font-size: 16px;
+        line-height: 30px;
+        padding: 5px 15px;
+    }
 }
